[package]
name          = "ecmascript"
version       = "0.1.0"
authors       = ["luozijun <luozijun.assistant@gmail.com>"]
edition       = "2018"
readme        = "README.rst"
license       = "MIT"
# license-file  = "LICENSE"
homepage      = "https://github.com/LuoZijun/es"
repository    = "https://github.com/LuoZijun/es"
description   = "A ECMAScript Parser and Interpreter written in Rust"
documentation = "https://luozijun.github.io/es/ecmascript/"
keywords = [ 
    "language", "ecmascript", "javascript", "parser", "lexer", 
    "compiler", "interpreter",
    "es", "js", "ast",
]
categories = [
    "Interpreter", "Lexer", "Parser", "Compiler", 
    "Language", "parser-implementations", "parsing", "wasm",
]
include = [
    "src/",
    "tests/",
    "examples/",
    "Cargo.toml",
    "README.rst",
    "LICENSE",
]
exclude = [
    "benches",
    "data",
    "scripts",
    "test262",
]

[lib]
# https://doc.rust-lang.org/reference/linkage.html
crate-type = ["lib"]

[workspace]
members = [
    
]

[dependencies]
log = "0.4"
unicode-xid = "0.1"
toolshed = "0.8"
vlq = "0.5"
serde = "1.0"
serde_json = "1.0"

time = "0.1"
num  = "0.2"
fnv  = "1.0"

# memchr = "2.2"


[dev-dependencies]
rustyline  = "3.0"
env_logger = { version = "0.6", default-features = false, features = [ "termcolor", "atty", "humantime"]  }

[features]
default  = [ "parser", "compiler", "vm" ]
parser   = [ ]
compiler = [ "parser" ]
vm       = [ "compiler" ]
nightly  = [ ]

# https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
[profile.dev]
opt-level = 0
debug = true
codegen-units = 16
lto = false
panic = "unwind"
incremental = false
overflow-checks = true

[profile.test]
opt-level = 0
debug = true
codegen-units = 16
lto = false
incremental = false
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = true
panic = "unwind"
incremental = false
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = true
incremental = false
overflow-checks = false